Enhance liquid glass shader and interaction features
- Added support for unlimited spawnable blobs with dynamic interaction effects.
- Introduced a shader linter script for validating GLSL files.
- Updated the main demo logic to handle multiple draggable blobs with billiard-style physics.
- Refactored shader uniforms to accommodate new blob properties and interactions.
- Improved visual effects including wobble and ripple animations upon user interaction.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "lint:shaders": "node scripts/lint-shaders.js"
   },
   "dependencies": {
     "@guinetik/gcanvas": "1.0.5"
